--- a/publications/index.tex
+++ b/publications/index.tex
@@ -1,10 +1,10 @@
 \section{List of publications}
   \begin{etaremune}  %add \usepackage{etaremune}
-  \item Multifractal Properties of BK Channels’ Currents in Human Glioblastoma Cells, A. Wawrzkiewicz-Jałowiecka, P. Trybek, B. Dworakowska and L. Machura, J. Phys. Chem. B 124,  12  2382-2391  (2020)
+  \item Dynamical Diversity of Mitochondrial BK Channels Located in Different Cell Types, A. Wawrzkiewicz-Jałowieckaa, P. Trybek, L. Machura and P. Bednarczyk, BioSystems 199,  104310 (2021) 
+
+\item Multifractal Properties of BK Channels’ Currents in Human Glioblastoma Cells, A. Wawrzkiewicz-Jałowiecka, P. Trybek, B. Dworakowska and L. Machura, J. Phys. Chem. B 124,  12  2382-2391  (2020)
 
 \item Differences in Gating Dynamics of BK Channels in Cellular and Mitochondrial Membranes from Human Glioblastoma Cells Unraveled by Short- and Long-Range Correlations Analysis, A. Wawrzkiewicz-Jałowiecka, P. Trybek, P. Borys, B. Dworakowska, L. Machura and P. Bednarczyk, Cells 9,  2305 (2020)
-
-\item Dynamical Diversity of Mitochondrial BK Channels Located in Different Cell Types, A. Wawrzkiewicz-Jałowieckaa, P. Trybek, L. Machura and P. Bednarczyk, BioSystems (2020),  accepted 
 
 \item The distribution of information for sEMG signals in the rectal cancer treatment process, P. Trybek, M. Nowakowski, J. Salowka and L. Machura, BioSystems 176,  13 (2019)
 
