--- a/publications/index.tex
+++ b/publications/index.tex
@@ -1,6 +1,8 @@
 \section{List of publications}
   \begin{etaremune}  %add \usepackage{etaremune}
-  \item Dynamical Diversity of Mitochondrial BK Channels Located in Different Cell Types, A. Wawrzkiewicz-Jałowieckaa, P. Trybek, L. Machura and P. Bednarczyk, BioSystems 199,  104310 (2021) 
+  \item Linking the Sampling Frequency with Multiscale Entropy to classify mitoBK patch-clamp data, L. Machura, A. Wawrzkiewicz-Jałowieckaa, P. Bednarczyk, and P. Trybek, Biomed Signal Process Control (2022)
+, 
+\item Dynamical Diversity of Mitochondrial BK Channels Located in Different Cell Types, A. Wawrzkiewicz-Jałowieckaa, P. Trybek, L. Machura and P. Bednarczyk, BioSystems 199,  104310 (2021) 
 
 \item Multifractal Properties of BK Channels’ Currents in Human Glioblastoma Cells, A. Wawrzkiewicz-Jałowiecka, P. Trybek, B. Dworakowska and L. Machura, J. Phys. Chem. B 124,  12  2382-2391  (2020)
 
