--- a/publications/index.tex
+++ b/publications/index.tex
@@ -2,6 +2,8 @@
   \begin{etaremune}  %add \usepackage{etaremune}
   \item A new method of the identification of the characteristic points in the impedance cardiography signal based on the Empirical Mode Decomposition, P. Trybek, E. Sobotnicka, A. Wawrzkiewicz--Jałowiecka, L. Machura,  D. Feige, A. Sobotnicki and M. Richter-Laskowska, Sensors 23,  675 (2023)
 
+\item Non-Monotonic Complexity of Stochastic Model of the Channel Gating Dynamics, L. Machura, A. Wawrzkiewicz-Jałowiecka, M. Richter-Laskowska and P., Entropy 25,  479 (2023)
+
 \item Linking the Sampling Frequency with Multiscale Entropy to classify mitoBK patch-clamp data, L. Machura, A. Wawrzkiewicz-Jałowieckaa, P. Bednarczyk, and P. Trybek, Biomed Signal Process Control 76,  103680 (2022)
 
 \item Dynamical Diversity of Mitochondrial BK Channels Located in Different Cell Types, A. Wawrzkiewicz-Jałowieckaa, P. Trybek, L. Machura and P. Bednarczyk, BioSystems 199,  104310 (2021) 
